<resources>
    <string name="app_name">Powerpro</string>
    <string name="you">You</string>
    <string name="news">News</string>
    <string name="modules">Modules</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="You_blank_fragment">You blank fragment</string>
    <string name="News_blank_fragment">New blank fragment</string>
    <string name="Modules_blank_fragment">Modules blank fragment</string>
    <string name="m_dulos">MÓDULOS</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut a leo nunc. Maecenas accumsan neque ac erat luctus laoreet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin elementum in erat vel bibendum. Morbi vitae pretium dolor. Quisque finibus, diam in elementum viverra, leo lacus semper orci, eget molestie augue mi at ex. Donec non dui gravida, maximus velit id, tristique lacus. In nec dui at justo bibendum scelerisque quis vel mauris. </string>
    <string name="detalles">DETALLES</string>
    <string name="noticias">NOTICIAS</string>
    <string name="potencia_requerida">Potencia Requerida</string>
    <string name="cantidad_en_w">Cantidad en W</string>
    <string name="cable_seg_n_potencia">LONGITUD DEL CABLE SEGÚN POTENCIA</string>
    <string name="calcular">Calcular</string>
    <string name="voltaje_de_red">Voltaje de Red</string>
    <string name="voltaje_en_v">Voltaje en V</string>
    <string name="longitud_por_potencia">Longitud por potencia</string>
    <string name="cuadro_el_ctrico">Cuadro eléctrico</string>
    <string name="diametro_por_amperaje">Diametro por amperaje</string>
    <string name="instalaci_n_solar">Instalación Solar</string>
    <string name="pr_ximamente">Próximamente</string>
    <string name="di_metro_del_cable_seg_n_amperaje">DIÁMETRO DEL CABLE SEGÚN AMPERAJE</string>
    <string name="promt_elgir">Elige el material del cable</string>
    <string name="material_del_cable">Material del cable</string>
    <string name="rendimiento_anual_de_la_instalaci_n">RENDIMIENTO ANUAL SOBRE LA INSTALACIÓN</string>
    <string name="amperaje_del_circuito">Amperaje del Circuito</string>
    <string name="cantidad_en_a">Cantidad en A</string>
    <string name="porcentaje_de_perdida">Porcentaje de Perdida</string>
    <string name="porcentaje_de_ca_da">Porcentaje de Caída</string>
    <string name="cuadro_electrico_titulo">CUADRO ELÉCTRICO</string>
    <string name="nombre_del_elemento">Nombre del elemento:</string>
    <string name="ej_disyuntor_16a">Ej. Disyuntor 16A</string>
    <string name="cantidad">Cantidad:</string>
    <string name="ej_3">Ej. 3</string>
    <string name="precio">Precio:</string>
    <string name="ej_10_00">Ej. 10.00</string>
    <string name="ver_resumen">Ver Resumen</string>
    <string name="agregar">Agregar</string>
    <string name="resumen">Resumen:</string>
    <string name="ubicaci_n_geogr_fica">Ubicación geográfica:</string>
    <string name="ciudad_pa_s">Ciudad, País</string>
    <string name="potencia_total_instalada_kw">Potencia total instalada (kW):</string>
    <string name="potencia_inversor">Potencia Inversor</string>
    <string name="tipo_de_panel_solar">Tipo de panel solar:</string>
    <string name="orientaci_n_del_panel">Orientación del panel (°):</string>
    <string name="ej_180">Ej. 180</string>
    <string name="inclinaci_n_del_panel">Inclinación del panel (°):</string>
    <string name="ej_30">Ej. 30</string>
    <string name="eficiencia_del_sistema">Eficiencia del sistema (%):</string>
    <string name="ej_15">Ej. 15</string>
    <string name="calcular_producci_n_anual">Calcular producción anual</string>
    <string name="producci_n_anual_estimada">Producción anual estimada:</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_noticia">Texto Noticia</string>
    <string name="titulo_noticia">Titulo Noticia</string>
    <string name="welcome_to">Welcome to</string>
    <string name="nombre">Nombre</string>
    <string name="test">test</string>
    <string name="producci_n_anual_estimada_kwh">Producción anual estimada: %1$s kWh</string>
    <string name="por_favor_ingrese_valores_v_lidos_para_todos_los_campos">Por favor ingrese valores válidos para todos los campos.</string>
    <string name="error_al_cargar_la_lista_de_noticias">Error al cargar la lista de noticias</string>
    <string name="longitud_m_xima_del_cable_metros">Longitud máxima del cable: %1$s metros</string>
    <string name="por_favor_ingresa_la_potencia_el_voltaje_y_el_porcentaje_de_p_rdida_requeridos">Por favor, ingresa la potencia, el voltaje y el porcentaje de pérdida requeridos.</string>
    <string name="unidades_precio_unitario">%1$s - %2$s unidades - Precio unitario: %3$s €\n</string>
    <string name="costo_total">Costo total: %1$s €</string>
    <string name="error_al_iniciar_sesi_n">Error al iniciar sesión</string>
    <string name="correo_electr_nico_o_contrase_a_incorrectos_por_favor_int_ntelo_de_nuevo">Correo electrónico o contraseña incorrectos. Por favor, inténtelo de nuevo.</string>
    <string name="error_pass">Error de contraseña</string>
    <string name="err_pass_msg">La contraseña debe tener al menos 6 caracteres, incluyendo al menos una letra mayúscula, una letra minúscula y un número.</string>
    <string name="pass_requisitos">La contraseña debe tener al menos 6 caracteres, incluyendo al menos una letra mayúscula, una letra minúscula y un número.</string>
    <string name="conf_cuenta">Cuenta creada correctamente</string>
    <string name="error_account">Error al crear una cuenta</string>
    <string name="create_account">Se ha producido un error al crear la cuenta. Por favor, inténtelo de nuevo.</string>
    <string name="empty_fields">Campos vacíos</string>
    <string name="empty_fields_msg">Rellene todos los campos</string>
    <string name="campos_vac_os">Campos vacíos</string>
    <string name="rellene_todos_los_campos">Rellene todos los campos</string>
    <string name="aceptar">Aceptar</string>
    <string name="example_hotmail_com">example@hotmail.com</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="password_auth">Password</string>
    <string name="sign_in_auth">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="creacionCuenta">Registro</string>


</resources>